# trombone

./: ALPHA_RELEASE_CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_LIMITATIONS.md  README.md  RELEASE_NOTES_ALPHA_DRAFT.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-prod.yml
examples/: bench.rs  capture.rs  duplex.rs  linux_bench.rs  linux_capture.rs  linux_duplex.rs  linux_tone.rs  oboe_bench.rs  tone.rs  windows_bench.rs  windows_capture.rs  windows_duplex.rs  windows_tone.rs
scripts/: android-doctor.sh  bench-compare.sh  build-android.sh  ndk-ar.sh  ndk-linker-aarch64.sh  ndk-linker-x86_64.sh  run-android.sh  run-linux.sh  run-windows.ps1  run-windows.sh  test-android-runtime.sh  test-linux-runtime.sh  wsl-doctor.sh
scripts/lib/: android-env.sh
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/android/: aaudio.rs  mod.rs  opensl_es.rs
src/backend/linux/: alsa.rs  mod.rs  pipewire.rs
src/backend/windows/: mod.rs  wasapi.rs
src/core/: callback.rs  config.rs  error.rs  metrics.rs  mod.rs  stream.rs
