[package]
name = "trombone"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A pure Rust-first low-latency audio I/O library targeting Android and beyond."
license = "Apache-2.0"

[features]
default = []
oboe-bench = ["dep:oboe"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6.1", optional = true }

[[example]]
name = "oboe_bench"
required-features = ["oboe-bench"]
