[package]
name = "trombone-audio"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Pure Rust audio I/O library targeting oboe-like performance across Android, Windows, and Linux."
license = "Apache-2.0"
repository = "https://github.com/fhenskens/trombone"
readme = "README.md"
keywords = ["audio", "realtime", "android", "wasapi", "pipewire"]
categories = ["multimedia::audio"]

[lib]
name = "trombone"

[features]
default = []
oboe-bench = ["dep:oboe"]
linux-pipewire = ["dep:pipewire"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Multimedia", "Win32_Security", "Win32_System_Com", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9.1"
libc = "0.2"
pipewire = { version = "0.8", optional = true }

[[example]]
name = "oboe_bench"
required-features = ["oboe-bench"]
